Added movies and index controller. Restructred routing.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=8"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
