--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.4",
+    "express-es6-template-engine": "^2.0.1",
     "nodemon": "^1.11.0"
   }
 }
