--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sequelize": "node_modules/.bin/sequelize"
   },
   "engines": {
     "node": ">=8"
@@ -19,6 +20,10 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "express-es6-template-engine": "^2.0.1",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "pg": "6.1.5",
+    "pg-hstore": "2.3.2",
+    "sequelize": "^4.4.3",
+    "sequelize-cli": "2.7.0"
   }
 }
