--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "express-es6-template-engine": "^2.0.1",
+    "jsonwebtoken": "^7.4.3",
     "nodemon": "^1.11.0",
     "pg": "6.1.5",
     "pg-hstore": "2.3.2",
